--- a/index.html
+++ b/index.html
@@ -120,31 +120,31 @@
     <div class="contact-card">
       <div class="label"><i class="fab fa-facebook-square"></i> Facebook:</div>
       <div class="value">
-        <a href="https://www.facebook.com/share/1AojFwLJcj/?mibextid=wwXIfr" target="_blank" rel="noopener noreferrer">RH-Digital Marketing Services</a>
+        <a href="https://www.facebook.com/share/1CL9PxG1pu/" target="_blank" rel="noopener noreferrer">T-Cube Digital Marketing Services</a>
       </div>
     </div>
     <div class="contact-card">
       <div class="label"><i class="fas fa-envelope"></i> Email:</div>
       <div class="value">
-        <a href="mailto:contact.rhdigitalmarketing@gmail.com">contact.rhdigital</a>
+        <a href="mailto:contact.rhdigitalmarketing@gmail.com">tcubedigitalmarketingservices@gmail.com</a>
       </div>
     </div>
     <div class="contact-card">
       <div class="label"><i class="fab fa-tiktok"></i> TikTok:</div>
       <div class="value">
-        <a href="https://www.tiktok.com/@username" target="_blank" rel="noopener noreferrer">tiktok.com/@username</a>
+        <a href="https://www.tiktok.com/@tcubedm?_t=ZS-8zA4DFxd1PN&_r=1" rel="noopener noreferrer">tiktok.com/@username</a>
       </div>
     </div>
     <div class="contact-card">
       <div class="label"><i class="fas fa-phone"></i> Phone:</div>
       <div class="value" id="phoneValue">
-        <a href="tel:+959763320740">09763320740</a>
+        <a href="tel:+959763320740">09403237800</a>
       </div>
     </div>
   </div>
 
   <div class="contact-button-container">
-    <a href="tel:+959763320740" class="call-button" id="callButton" aria-label="Call Us">
+    <a href="tel:+959403237800" class="call-button" id="callButton" aria-label="Call Us">
       <i class="fas fa-phone"></i> Contact Us
     </a>
   </div>
