--- a/index.html
+++ b/index.html
@@ -132,7 +132,7 @@
     <div class="contact-card">
       <div class="label"><i class="fab fa-tiktok"></i> TikTok:</div>
       <div class="value">
-        <a href="https://www.tiktok.com/@tcubedm?_t=ZS-8zA4DFxd1PN&_r=1" rel="noopener noreferrer">tiktok.com/@username</a>
+        <a href="https://www.tiktok.com/@tcubedm?_t=ZS-8zA4DFxd1PN&_r=1" rel="noopener noreferrer">T-Cube Digital Services</a>
       </div>
     </div>
     <div class="contact-card">
