--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     margin: 0;
     background: #ffffff;
     font-family: 'Poppins', sans-serif;
-    color: #0476D9;
+    color: #0066ff;
     display: flex;
     flex-direction: column;
     align-items: center;
