--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 
   h1 {
     font-weight: 600;
-    color: #0476D9;
+    color: #0066ff;
     margin-bottom: 2rem;
     text-shadow: 0 0 4px #0476D999;
   }
@@ -54,7 +54,7 @@
   .label {
     display: flex;
     align-items: center;
-    color: #0476D9;
+    color: #0066ff;
     font-weight: 700;
     font-size: 1.1rem;
     min-width: 110px;
@@ -66,7 +66,7 @@
   }
 
   .value a {
-    color: #0476D9;
+    color: #0066ff;
     font-size: 1.05rem;
     text-decoration: none;
     word-break: break-all;
@@ -75,7 +75,7 @@
   }
 
   .value a:hover {
-    color: #044a86;
+    color: #0066ff;
     text-decoration: underline;
   }
 
@@ -85,7 +85,7 @@
   }
 
   .call-button {
-    background-color: #0476D9;
+    background-color: #0066ff;
     color: #ffffff;
     font-weight: 700;
     font-size: 1.2rem;
